@@ -1,7 +1,8 @@
 6.14.5.1
     rtstats(1):
-        * Commented code about who logs
-        * Removed trailing newline in rtstats(1) log message
+        * Commented code about who logs because the code is convoluted
+        * Removed trailing newline in rtstats(1) log message to eliminate extraneous log message
+        * Eliminated sending of NULLPROC before closing connection because it's superfluous
 
     Documentation:
         * Added requirement that "RemoveIPC" in "/etc/systemd/logind.conf" must be "no" to
